--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
     "repo_url": "https://github.com/deepesh611/Shell-Password-Manager",
-    "branch": "main",
-    "backup_dir": "backup"
+    "branch": "main"
   }
   
